add form validation + css

--- a/src/app/layout/header.html
+++ b/src/app/layout/header.html
@@ -1,12 +1,3 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-<div class="container">
- <div class="navbar-header">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
-		 <span class="sr-only">Toggle navigation</span>
-		 <span class="icon-bar"></span>
-		 <span class="icon-bar"></span>
-		 <span class="icon-bar"></span>
-	 </button>
-	 <a href="#/" class="navbar-brand">The Interest Calculator 2000</a>
-</div>
+<nav class="navbar navbar-light bg-faded">
+	<a  style="color:white;" class="navbar-brand" href="#">Interest calculator 2000</a>
 </nav>
