--- a/src/app/calculator/calculator.html
+++ b/src/app/calculator/calculator.html
@@ -1,17 +1,42 @@
 <div class="container">
-  <h2>Step 1:</h2>
-    <select ng-model="selectedInterest" ng-change="onSelectInterest()">
-      <option value="">Select Interest</option>
-      <option value="simple">Simple</option>
-      <option value="compound">Compound</option>
-    </select>
+  
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Step 1: Choose Type of Interest</h3>
+      <select ng-model="selectedInterest" ng-change="onSelectInterest()">
+        <option value="">Select Interest</option>
+        <option value="simple">Simple</option>
+        <option value="compound">Compound</option>
+      </select>
+    </div>
+  </div>
+    
+  <!-- Information Form -->
+  <!-- Text inputs for regex pattern validation -->
+  <div class="row">
+    <div class="col-md-12">
+      <div ng-if="selectedInterest" style="margin-top:20px" ng-submit="onSubmitForm(interest)">
+          <h3>Step 2: Fill in information</h3>
+          <form novalidate class="simple-form" name="interestForm">
+            
+            <label>Principal: 
+              <input
+                ng-pattern="numberPattern"
+                type="text" 
+                ng-model="interest.principal" 
+                name= "interest.principal" 
+                required />
+            </label><br />
+        
+            <label>Rate of interest (%):
+              <input type="text" ng-model="interest.rate" ng-pattern="numberPattern" required/>
+            </label>
+            <br />
 
-    <div ng-if="selectedInterest" style="margin-top:20px" ng-submit="onSubmitForm(interest)">
-        <h2>Step 2:</h2>
-        <form novalidate class="simple-form" name="interestForm">
-            <label>Principal: <input type="text" ng-model="interest.principal" name= "interest.principal" required/></label><br />
-            <label>Rate of interest: (%) <input type="text" ng-model="interest.rate"  required/></label><br />
-            <label>Years: <input type="text" ng-model="interest.timePeriod" required/></label><br />
+            <label>Years: 
+              <input type="text" ng-model="interest.timePeriod" ng-pattern="timePeriodPattern" required/>
+            </label>
+            <br />
 
             <div ng-if="selectedInterest === 'compound'">
               <label>Interest Frequency: </label>
@@ -24,34 +49,42 @@
               <br />
             </div>
 
-            <input type="button" ng-click="reset()" value="Reset" />
-            <input type="submit" ng-disabled="interestForm.$invalid" />
+            <input type="button" class="btn btn-warning" ng-click="reset()" value="Reset" />
+            <input type="submit" class="btn btn-success" ng-disabled="interestForm.$invalid" />
           </form>
+      </div>
     </div>
-    <div  style="margin-top:20px" ng-if="showTable">
-      <h2>Results: </h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Year</th>
-            <th>Interest</th>
-            <th>Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="interest in interestDisplayArr">
-              <td>{{ interest.period }}</td>
-              <td>{{ interest.interestAmount  | number : 2 }}</td>
-              <td>{{ interest.totalAmount | number : 2 }}</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr style="font-weight: bold;">
-            <td>Sum: </td>
-            <td>{{ interestSum | number : 2}}</td>
-            <td>{{ totalSum | number : 2 }}</td>
-          </tr>
-        </tfoot>
-        </table>
+  </div>
+
+  <!-- Table with amounts: -->
+  <div class="row">
+    <div class="col-md-12">
+      <div  style="margin-top:20px" ng-if="showTable">
+        <h3>Results: </h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Year</th>
+              <th>Interest</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="interest in interestDisplayArr">
+                <td>{{ interest.period }}</td>
+                <td>{{ interest.interestAmount  | number : 2 }}</td>
+                <td>{{ interest.totalAmount | number : 2 }}</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr style="font-weight: bold;">
+              <td>Sum: </td>
+              <td>{{ interestSum | number : 2}}</td>
+              <td>{{ totalSum | number : 2 }}</td>
+            </tr>
+          </tfoot>
+          </table>
+        </div>
     </div>
+  </div>
 </div>
