--- a/src/app/layout/header.html
+++ b/src/app/layout/header.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-faded">
-	<a  style="color:white;" class="navbar-brand" href="#">Interest calculator 2000</a>
+	<a  style="color:white;" class="navbar-brand" href="#">The Interest Calculator 2000</a>
 </nav>
